--- a/social/static/css/main.css
+++ b/social/static/css/main.css
@@ -26,12 +26,16 @@
 
 .nav-links li{
     margin: 0 30px;
+    
 }
 
 .active{
     color: #fc036b;
     text-decoration: underline;
     font-weight: bold;
+    cursor: pointer;
+  
+    
 }
 /* end nav */
 a{
@@ -54,7 +58,7 @@ header{
 
    
  
-}   
+}  
 
 .header-content{
     margin-bottom: 150px;
@@ -92,6 +96,8 @@ header{
     right: 30px;
     width: 40px;
     cursor: pointer;
+    display: none;
+    
 }
 
 
@@ -101,6 +107,10 @@ header{
 /* mobile device */
 
 @media screen and (max-width:850px) {
+
+    .menu-btn{
+        display: block;
+    }
     .navbar{
         padding: 0;
 
@@ -123,9 +133,128 @@ header{
     }
     .mobile-menu{
         margin-top: 0px;
+   
     }
     .nav-links li{
         margin: 30px auto;
     }
     
 }
+
+
+
+/* start events  */
+section{
+    width: 80%;
+    margin: 80px auto;
+}
+
+.title{
+    text-align: center;
+    font-size: 4vmin;
+    color: rgb(73,73,126);
+}
+.row{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+.row .col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.events .row{
+    margin-top: 50px;
+}
+h4{
+    font-size: 4vmin;
+    color: #484872;
+    margin: 20px auto;
+}
+p{
+    color: #7c7c7c;
+    padding: 0px 40px;
+
+}
+.events .ctn{
+    margin-top: 30px;
+}
+/* end events */
+
+/* start explore */
+.explore{
+    width: 100%;
+    height: 80vh;
+    background-position:center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.explore-content{
+    width: 60%;
+    padding: 50px;
+    color: whitesmoke;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.explore-content h1{
+    font-size: 7vmin;
+
+}
+.explore-content .line{
+    margin-bottom: 50px;
+}
+.explore-content p{
+    color: rgb(221,221,221);
+}
+
+.explore-content .ctn{
+    margin-top: 40px;
+
+}
+/* end explore */
+
+/* start tours */
+.content-col{
+    width:40%;
+}
+.img-col{
+    width:60%;
+}
+
+.tours .img-gallery{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+   
+ 
+}
+.content-col h1{
+    font-size: 7vmin;
+    color:#484872;
+}
+.content-col .line{
+    margin-left: -1px;
+
+}
+.content-col p{
+    padding:0;
+    margin:30px auto;
+}
+.content-col .ctn{
+    margin-left: -100px;
+}
+.img-gallery img{
+    width: 300px;
+    margin: 10px;
+}
+/* end tours */
+
+
+
+
+
